2008-03-16  Christian Kellner  <gicmo@gnome.org>

	* AUTHORS: Forgot to mention A. Walton. Correct that.

2008-03-16  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonfile.c:  Don't free up the error that
	we don't own (#522566). Thanks Cosimo Cecchi for helping
	to debug the issue.

2008-03-16  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* programs/gvfs-rename.c (main): Fix wording of error
	messages. Don't include "Error renaming file" since
	that's what the error->message might contain as well.

2008-03-14  Christian Kellner  <gicmo@gnome.org>

	* programs/Makefile.am:
	* programs/gvfs-rename.c:
	Add a little helper program that renames files
	by calling g_file_set_display_name ().

2008-03-14  Christian Kellner  <gicmo@gnome.org>

	* AUTHORS: Update, add a lot of people and I am
	sure I have forgotten a few.

	* MAINTAINERS: Add myself

2008-03-14  Hans Petter Jansson  <hpj@novell.com>

	Implement most of the GDaemonFile async functions.

	* client/gdaemonfile.c (stream_open_cb): Implement.
	(append_to_async_cb): Implement.
	(g_daemon_file_append_to_async): Implement.
	(g_daemon_file_append_to_finish): Implement.
	(create_async_cb): Implement.
	(g_daemon_file_create_async): Implement.
	(g_daemon_file_create_finish): Implement.
	(enumerate_children_async_cb): Implement.
	(g_daemon_file_enumerate_children_async): Implement.
	(g_daemon_file_enumerate_children_finish): Implement.
	(find_enclosing_mount_cb): Implement.
	(g_daemon_file_find_enclosing_mount_async): Implement.
	(g_daemon_file_find_enclosing_mount_finish): Implement.
	(replace_async_cb): Implement.
	(g_daemon_file_replace_async): Implement.
	(g_daemon_file_replace_finish): Implement.
	(set_display_name_async_cb): Implement.
	(g_daemon_file_set_display_name_async): Implement.
	(g_daemon_file_set_display_name_finish): Implement.
	(g_daemon_file_file_iface_init): Hook up new async functions.

2008-03-14  Alexander Larsson  <alexl@redhat.com>

	* daemon/main.c: